<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/edit_text_toolbar"
            style="@style/SuperAppToolbar"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/edit_text"
            app:titleTextColor="@color/white"/>

        <TextView
            android:id="@+id/login"
            style="@style/DescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <EditText
            android:id="@+id/editLogin"
            style="@style/BodyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login" />

        <TextView
            android:id="@+id/password"
            style="@style/DescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/editPassword"
            style="@style/BodyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/buttonOk"
            style="@style/EditTextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BtnLogin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login2"
                style="@style/BodyEditText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_colon" />

            <TextView
                android:id="@+id/textView5"
                style="@style/future_pass_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="qwerty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password2"
                style="@style/BodyEditText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password_colon" />

            <TextView
                android:id="@+id/textView7"
                style="@style/future_pass_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="123456" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_black"
            style="@style/BodyEditTextBlack"/>

        <TextView
            android:id="@+id/editText"
            style="@style/BodyEditTextBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editText"/>

        <EditText
            android:id="@+id/editTextFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextFrame"
            android:inputType="number" />

        <TextView
            android:id="@+id/editText2"
            style="@style/BodyEditTextBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="123456" />

        <TextView
            android:id="@+id/editTextFocused"
            style="@style/BodyEditTextBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editTextFocused" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>